Ensure window cannot go off screen

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,11 +101,13 @@ body {
     bottom: 0;
     left: 0;
     width: 100%;
+    height: 5%;
     background-color: #333;
     color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 10000;
 }
 
 .social-media-icons {
